--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "rooks": "^5.8.0",
     "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2",
     "typescript": "^4.4.4",
