--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.18"
   }
