--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@mantine/hooks": "^6.0.13",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-switch": "^1.0.3",
