--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "styled-components": "^5.3.5",
     "styled-media-query": "^2.1.2",
     "typescript": "^4.8.2",
-    "web-vitals": "^3.0.0"
+    "web-vitals": "^3.0.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
