--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@mantine/hooks": "^6.0.13",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^1.8.5",
